Rename the meetup

--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="ko-KR">
 <head>
   <meta carset="utf-8">
-  <title>WEIRDMEETUP in Melbourne</title>
-  <link href="http://fonts.googleapis.com/css?family=Raleway:500" rel="stylesheet" type="text/css">
+  <title>Korean Developer Melbourne</title>
 </head>
 <body>
-  <script type="text/javascript">window.location.replace('http://www.meetup.com/Weird-Developers-Melbourne/');</script>
-  <h1>WEIRDMEETUP<span>in Melbourne</span></h1>
+  <script type="text/javascript">window.location.replace('http://www.meetup.com/Korean-Developers-Melbourne/');</script>
+  <h1>Korean Developer Melbourne</span></h1>
 </body>
 </html>
-
